--- a/ThuyTienNguyen_CoursePlannerApp/Views/CourseFormPage.xaml
+++ b/ThuyTienNguyen_CoursePlannerApp/Views/CourseFormPage.xaml
@@ -5,7 +5,7 @@
     <ContentPage.Content>
         <ScrollView>
 
-            <StackLayout>
+            <StackLayout BackgroundColor="Gray">
                 <StackLayout>
                     <Label 
                         Text="Course" 
@@ -54,7 +54,11 @@
                         Text="Save" 
                         Clicked="SaveEditButton_Clicked"
                     />
-                    <Button Text="Cancel" Clicked="CancelButton_Clicked"/>
+                    <Button
+                        x:Name="CancelButton" 
+                        Style="{StaticResource cancelButton}"
+                        Text="Cancel" 
+                        Clicked="CancelButton_Clicked"/>
                 </StackLayout>
             </StackLayout>
         </ScrollView>
