--- a/ThuyTienNguyen_CoursePlannerApp/Views/TermViewPage.xaml
+++ b/ThuyTienNguyen_CoursePlannerApp/Views/TermViewPage.xaml
@@ -3,6 +3,19 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:globals="clr-namespace:ThuyTienNguyen_CoursePlannerApp"
              x:Class="ThuyTienNguyen_CoursePlannerApp.Views.TermViewPage">
+
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <Style x:Key="courseButton" TargetType="Button">
+                <Setter Property="BorderWidth" Value="1" />
+                <Setter Property="BorderColor" Value="White"/>
+                <Setter Property="TextColor" Value="White" />
+                <Setter Property="FontSize" Value="Medium" />
+                <Setter Property="BackgroundColor" Value="#002F51"/>
+            </Style>
+
+        </ResourceDictionary>
+    </ContentPage.Resources>
     <NavigationPage.TitleView>
         <StackLayout>
             <Label 
@@ -12,21 +25,17 @@
         </StackLayout>
     </NavigationPage.TitleView>
     <ContentPage.Content>
-        <StackLayout>
-            <StackLayout>
+        <StackLayout BackgroundColor="Beige">
+            <StackLayout VerticalOptions="Start">
                 <Label 
                     x:Name="TermDateRange"
                     Style="{StaticResource dateRange}"
+                  
                  />
-            </StackLayout>
-            <StackLayout VerticalOptions="Start">
-                <Button 
-                    Text="Add Course (Max 6)"
-                    Style="{StaticResource regularButton}"
-                    Clicked="AddCourse_Clicked"
-                />
               
+
             </StackLayout>
+           
             <StackLayout VerticalOptions="StartAndExpand">
                 <ListView
                     x:Name="CoursesList"
@@ -48,8 +57,14 @@
                     </ListView.ItemTemplate>
                 </ListView>
             </StackLayout>
-            <StackLayout VerticalOptions="End">
-              
+
+             <StackLayout VerticalOptions="End">
+                <Button 
+                    Text="Add Course (Max 6)"
+                    Style="{StaticResource courseButton}"
+                    Clicked="AddCourse_Clicked"
+                />
+
                 <Button 
                     Text="Edit Term"
                     Style="{StaticResource regularButton}"
