--- a/ThuyTienNguyen_CoursePlannerApp/Views/TermsListPage.xaml
+++ b/ThuyTienNguyen_CoursePlannerApp/Views/TermsListPage.xaml
@@ -3,20 +3,40 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:globals="clr-namespace:ThuyTienNguyen_CoursePlannerApp"
              x:Class="ThuyTienNguyen_CoursePlannerApp.Views.TermsListPage">
-
+  
     <NavigationPage.TitleView>
+        
         <StackLayout>
-            <Label 
+           
+                <StackLayout
+                    HorizontalOptions="Center"
+                    VerticalOptions="Center"
+                >
+                  
+                        <Image
+                        HeightRequest="48"
+                        Source="wgu_logo.png"
+                        />
+                  
+                </StackLayout>
+          
+        </StackLayout>
+
+    </NavigationPage.TitleView>
+    <ContentPage.Content>
+
+        <StackLayout BackgroundColor="Beige">
+
+            <StackLayout VerticalOptions="Start">
+                <Label 
                 Text="WGU Course Planner" 
                 Style="{StaticResource pageTitle}"
              />
-        </StackLayout>
-    </NavigationPage.TitleView>
-    <ContentPage.Content>
-        <StackLayout>
+            </StackLayout>
             <ListView 
                 x:Name="TermsList" 
                 HasUnevenRows="True" 
+               
                 ItemsSource="{Binding Source= {x:Static globals:VMControls.Terms}}"
             >
                 <ListView.ItemTemplate>
@@ -36,7 +56,7 @@
             <StackLayout VerticalOptions="End">
                 <Button
                     Text="Add Term"
-                    Style="{StaticResource regularButton}"
+                    Style="{StaticResource addButton}"
                     Clicked="AddTerm_Clicked"
                 />
             </StackLayout>
